Added Levent's slides and grader OHs

--- a/data/lectures.yml
+++ b/data/lectures.yml
@@ -31,6 +31,7 @@
             - {Felippa's "Matrix Calculus" chapter: "http://www.colorado.edu/engineering/cas/courses.d/IFEM.d/IFEM.AppF.d/IFEM.AppF.pdf"}
           Slides and Notes:
 #            - {Matrix Differentiation: "docs/matrix-differentiation.pdf"}
+            - {Levent's Differentiation Slides: "http://davidrosenberg.github.io/mlcourse/Labs/1differentiation.pdf"}
             - {Matrix Differentiation: "http://davidrosenberg.github.io/ml2015/docs/matrix-differentiation.pdf"}
             - {Directional Derivatives and Approximation: "https://davidrosenberg.github.io/mlcourse/Notes/directional-derivative.pdf"}
 
