Posted link for video of lecture 2

--- a/data/lectures.yml
+++ b/data/lectures.yml
@@ -39,7 +39,7 @@
   Events:
     2015-02-03:
       Label: Lecture
-#      Video: "http://techtalks.tv/talks/lecture-44/61399/"
+      Video: "http://techtalks.tv/talks/lecture-feb-3rd/62106/"
       Topics:
         Excess Risk Decomposition:
 #          References (Pre):
