Posted new lectures and assignment #2

--- a/data/assignments.yml
+++ b/data/assignments.yml
@@ -9,12 +9,12 @@ Submit link: "https://newclasses.nyu.edu/portal"
   ZIP: {hw1.zip: "http://davidrosenberg.github.io/mlcourse/Homework/hw1.zip"}
 
 #  Solutions: {hw1_solutions.zip: "homework/hw1-sgd/hw1_solutions.zip"}
-# -
-#   Label: Homework 2
-#   Description: Lasso regression
-#   Due: 2015-02-13
-#   PDF: {hw2.pdf: "homework/hw2.pdf"}
-#   ZIP: {hw2.zip: "homework/hw2.zip"}
+-
+  Label: Homework 2
+  Description: Lasso regression
+  Due: 2015-02-13
+  PDF: {hw2.pdf: "http://davidrosenberg.github.io/mlcourse/Homework/hw2-lasso/hw2.pdf"}
+  ZIP: {hw2.zip: "http://davidrosenberg.github.io/mlcourse/Homework/hw2.zip"}
 # -
 #   Label: Homework 3
 #   Description: SVM and Sentiment Analysis
