--- a/data/lectures.yml
+++ b/data/lectures.yml
@@ -70,26 +70,29 @@
 #            - {Boyd's subgradient notes: "http://web.stanford.edu/class/ee364b/lectures.html"}
 #          Slides and Notes:
 #            - {Subgradient Methods: "https://davidrosenberg.github.io/mlcourse/Lectures/2.Lab.subgradient-descent.pdf"}
-# -
-#   Title: Week 3
-#   Events:
-#     2015-02-10:
-#       Label: Lecture
-# #      Video: "http://techtalks.tv/talks/lecture-47/61403/"
-#       Topics:
-#         Convex Optimization:
-#           Slides and Notes:
-#             - {Convex optimization: "https://davidrosenberg.github.io/mlcourse/Lectures/3b.convex-optimization.pdf"}
-#             - {Extreme Abridgement of BV: "https://davidrosenberg.github.io/mlcourse/Lectures/convex-optimization.pdf"}
-#           References (Supplemental):
-#             - {Andrew Ng's CS229 SVM Notes: "http://cs229.stanford.edu/notes/cs229-notes3.pdf"}
-#             - BV Ch 1-5
-#         SVM:
-#           References (Supplemental):
-#             - "HTF 12.2.1 - 12.2.2"
-#           Slides and Notes:
-#             - {SVM (slides): "https://davidrosenberg.github.io/mlcourse/Lectures/3c.SVM.pdf"}
-#             - {SVM (notes): "docs/svm-notes.pdf"}
+-
+  Title: Week 3
+  Events:
+    2015-02-10:
+      Label: Lecture
+#      Video: "http://techtalks.tv/talks/lecture-47/61403/"
+      Topics:
+        Loss Functions:
+          Slides and Notes:
+            - {Loss functions: "https://davidrosenberg.github.io/mlcourse/Lectures/3a.loss-functions.pdf"}
+        Convex Optimization:
+          Slides and Notes:
+            - {Convex optimization: "https://davidrosenberg.github.io/mlcourse/Lectures/3b.convex-optimization.pdf"}
+            - {Extreme Abridgement of BV: "https://davidrosenberg.github.io/mlcourse/Notes/convex-optimization.pdf"}
+          References (Supplemental):
+            - {Andrew Ng's CS229 SVM Notes: "http://cs229.stanford.edu/notes/cs229-notes3.pdf"}
+            - BV Ch 1-5
+        SVM:
+          References (Supplemental):
+            - "HTF 12.2.1 - 12.2.2"
+          Slides and Notes:
+            - {SVM (slides): "https://davidrosenberg.github.io/mlcourse/Lectures/3c.SVM.pdf"}
+            - {SVM (notes): "https://davidrosenberg.github.io/mlcourse/Notes/svm-notes.pdf"}
 
 #     2015-02-11:
 #       Label: Lab
