--- a/data/lectures.yml
+++ b/data/lectures.yml
@@ -153,7 +153,7 @@
 #           - "KPM 14.2.1-14.2.6"
         Trees:
           Slides and Notes:
-            - {Trees: "https://davidrosenberg.github.io/mlcourse/Lectures/5b.trees.pdf"}
+            - {Trees: "https://davidrosenberg.github.io/mlcourse/Lectures/5c.trees.pdf"}
           References (Supplemental):
             - "HTF 9.2"
 #            - "KPM 16-16.2.4"
